name:                JavaMM
version:             1.0
synopsis:            J-- Compiler
homepage:            http://www.di.unito.it/~padovani/Software/FairCheck/index.html
license:             GPL-3
license-file:        LICENSE
author:              Luca Padovani
maintainer:          luca.padovani@unito.it
copyright:           (c) 2022 Luca Padovani
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md,
                     README.md,
                     Makefile
cabal-version:       >=1.18

executable j--
  main-is:           Main.hs

  other-modules:     Common,
                     Atoms,
                     Type,
                     Language,
                     SourceLanguage,
                     TypedLanguage,
                     Parser,
                     Lexer,
                     Exceptions,
                     Render,
                     SymbolTable,
                     Checker,
                     Jasmin,
                     Compiler
  other-extensions:  CPP

  build-depends:     base >=4.9,
                     containers >=0.5,
                     mtl >=2.2,
                     array >=0.5,
                     time >=1.5,
                     filepath >=1.4,
                     prettyprinter >=1.0,
                     prettyprinter-ansi-terminal >=1.0,
                     random >=1.2.1

  hs-source-dirs:    src
  build-tools:       alex, happy
  default-language:  Haskell2010
